# FreeLunch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FREELUNCH_SPEC_v8.md  IMPLEMENTATION_GUIDE.md  OPERATIONS.md  README.md  RELEASE_VALIDATION_EVIDENCE.md  RELEASE_VALIDATION_MATRIX.md  SPEC_GAP_REVIEW.md  TASKS.md  TESTING.md  bench_pytest_output.txt  config.yaml.example  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_app_probe.db  tmp_probe.db  uninstall.ps1  uninstall.sh
.perf_timing_tmp/: config.yaml  perf.db
.pytest_tmp/: test_discovery_upsert_preservecurrent  test_init_applies_all_schema_mcurrent  test_leaderboard_cache_round_tcurrent  test_set_override_uses_canoniccurrent
.pytest_tmp_app/: test_get_provider_probe_usage_current  test_healthzcurrent  test_mark_failure_applies_coolcurrent  test_mark_success_clears_backocurrent  test_recompute_ranking_preferscurrent  test_recompute_ranking_uses_opcurrent  test_recompute_ranking_uses_tecurrent  test_run_health_checks_recovercurrent  test_run_health_checks_respectcurrent
.pytest_tmp_app2/: test_admin_enable_disable_modecurrent  test_admin_endpointscurrent  test_admin_logs_returns_recentcurrent  test_admin_refresh_triggers_dicurrent  test_chat_completion_streamingcurrent  test_chat_completions_autocurrent  test_chat_completions_returns_current  test_get_provider_probe_usage_current  test_healthzcurrent  test_mark_failure_applies_coolcurrent  test_mark_success_clears_backocurrent  test_models_endpointcurrent  test_readyzcurrent  test_recompute_ranking_preferscurrent  test_recompute_ranking_uses_opcurrent  test_recompute_ranking_uses_tecurrent  test_run_health_checks_recovercurrent  test_run_health_checks_respectcurrent
.pytest_tmp_cfg1/: test_admin_config_override_rescurrent  test_admin_config_override_updcurrent  test_admin_enable_disable_modecurrent  test_admin_endpointscurrent  test_admin_logs_returns_recentcurrent  test_admin_refresh_triggers_dicurrent  test_chat_completion_streamingcurrent  test_chat_completions_autocurrent  test_chat_completions_fails_ovcurrent  test_chat_completions_returns_current  test_healthzcurrent  test_models_endpointcurrent  test_readyzcurrent
.pytest_tmp_cfg_full/: test_admin_config_override_rescurrent  test_admin_config_override_updcurrent  test_admin_enable_disable_modecurrent  test_admin_endpointscurrent  test_admin_logs_returns_recentcurrent  test_admin_refresh_triggers_dicurrent  test_chat_completion_streamingcurrent  test_chat_completions_autocurrent  test_chat_completions_fails_ovcurrent  test_chat_completions_returns_current  test_discovery_upsert_preservecurrent  test_get_provider_probe_usage_current  test_healthzcurrent  test_init_applies_all_schema_mcurrent  test_leaderboard_cache_round_tcurrent  test_mark_failure_applies_coolcurrent  test_mark_success_clears_backocurrent  test_models_endpointcurrent  test_readyzcurrent  (+6 more)
src/: config.py  (+13 more)
(+494 files in other folders)
